<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray1"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/home_message"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rect"
        android:gravity="center"
        android:padding="8dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/total_cases"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/totalCasesTv"
            android:layout_weight="1"
            android:text="-"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rect"
        android:gravity="center"
        android:padding="8dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/new_cases"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/newCasesTv"
            android:layout_weight="1"
            android:text="-"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rect"
        android:gravity="center"
        android:padding="8dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/total_deaths"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/totalDeathsTv"
            android:layout_weight="1"
            android:text="-"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rect"
        android:gravity="center"
        android:padding="8dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/new_deaths"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/newDeathsTv"
            android:layout_weight="1"
            android:text="-"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rect"
        android:gravity="center"
        android:padding="8dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/total_recovered"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/totalRecoveredTv"
            android:layout_weight="1"
            android:text="-"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rect"
        android:gravity="center"
        android:padding="8dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/new_recovered"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/newRecoveredTv"
            android:layout_weight="1"
            android:text="-"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="textEnd"/>

    </LinearLayout>

</LinearLayout>